# Jewel.ai

./: .gitignore  README.md  Scrapebs.py  bluestone.csv  centroidiou.py  clean_bluestone_folders.py  debug_segmentation.py  image_quality_metrics.py  installsam.sh  jewelbox (1).csv  jewelry_compositor.py  main.py  process_jewels.py  pyproject.toml  run_fastsam.py  scrape.py  scrape_bluestone_batch.py
