[project]
name = "scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "google-genai>=1.63.0",
    "dotenv>=0.9.9",
    "torchmetrics>=1.8.2",
    "lpips>=0.1.4",
    "scipy>=1.17.0",
    "torch-fidelity>=0.4.0",
    "ultralytics>=8.4.14",
    "matplotlib>=3.10.8",
    "gradio>=6.6.0",
    "zhipuai>=2.0.0",
    "rembg[cpu]>=2.0.60",
    "mediapipe>=0.10.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.uv.extra-build-dependencies]
clip = ["setuptools"]
